[package]
name = "rustc-llvm-proxy"
version = "0.1.1"
authors = ["Denys Zariaiev <denys.zariaiev@gmail.com>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/denzp/rustc-llvm-proxy"
categories = ["development-tools::build-utils", "external-ffi-bindings"]
keywords = ["llvm"]

[badges]
appveyor = { repository = "denzp/rustc-llvm-proxy", branch = "master", service = "github" }
travis-ci = { repository = "denzp/rustc-llvm-proxy", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
libloading = "0.5"
lazy_static = "1.0"
failure = "0.1"
libc = "0.2"

[dependencies.llvm-sys]
git = "https://github.com/denzp/llvm-sys.rs.git"
features = ["no-llvm-linking"]

[build-dependencies]
cargo_metadata = "0.6"
failure = "0.1"
quote = "0.6"

[build-dependencies.syn]
version = "0.14"
features = ["full"]
